Fixed visibility issue with padding, for science!

--- a/default_style.css
+++ b/default_style.css
@@ -53,6 +53,7 @@ div[id=info] {
 	float: left;
 	width: 25%;
 	height: 100%;
+	padding: 60px 0px 0px 0px;
 }
 
 img[class=active] {
